--- a/adoc/bp_postgresql_database_migration.adoc
+++ b/adoc/bp_postgresql_database_migration.adoc
@@ -170,7 +170,7 @@ If the upgrade fails, the migration script will attempt to restore the database 
 . Perform a database backup.
 Without a verified database backup, you must not initiate a fast upgrade.
 // For more information on backing up, see xref:administration:backup-restore.adoc[].
-. Begin the upgrade:
+. Start the upgrade:
 +
 ----
 /usr/lib/susemanager/bin/pg-migrate-96-to-10.sh fast
