--- a/modules/administration/pages/tuning-changelogs.adoc
+++ b/modules/administration/pages/tuning-changelogs.adoc
@@ -12,7 +12,9 @@ The parameter defaults to [systemitem]``0``, which means unlimited.
 java.max_changelog_entries = 0
 ----
 
-If you set this parameter (remember you need to restart the services with `spacewalk-service restart`), it will come into effect only for new packages when they are synchronized.
+If you set this parameter, it will come into effect only for new packages when they are synchronized.
+
+After changing this parameter, restart services with ``spacewalk-service restart``.
 
 You might like to delete and regenerate the cached data to remove older data.
 
@@ -23,16 +25,16 @@ Depending on the number of channels you have and the amount of data to be delete
 The task is run in the background by Taskomatic, so you can continue to use {productname} while the operation completes, however you should expect some performance loss.
 ====
 
-You can delete and and request a regeneration of cached data from the command line, using the SQL interface:
+You can delete and request a regeneration of cached data from the command line:
 
 ----
-# spacewalk-sql -i
-yourdatabase=# DELETE FROM rhnPackageRepodata;
-yourdatabase=# INSERT INTO rhnRepoRegenQueue (id, CHANNEL_LABEL, REASON, FORCE)
-               (SELECT sequence_nextval('rhn_repo_regen_queue_id_seq'),
-                       C.label,
-                       'cached data regeneration',
-                       'Y'
-                FROM rhnChannel C);
-yourdatabase=#  \q
+spacewalk-sql -i
+DELETE FROM rhnPackageRepodata;
+INSERT INTO rhnRepoRegenQueue (id, CHANNEL_LABEL, REASON, FORCE)
+(SELECT sequence_nextval('rhn_repo_regen_queue_id_seq'),
+        C.label,
+        'cached data regeneration',
+        'Y'
+        FROM rhnChannel C);
+\q
 ----
