--- a/modules/administration/pages/tuning-clientdiscovery.adoc
+++ b/modules/administration/pages/tuning-clientdiscovery.adoc
@@ -14,7 +14,7 @@ The client is then recorded in the database with an inventory of their hardware,
 
 
 
-=== Network Range Discovery
+== Network Range Discovery
 
 You can use the Salt scanning roster function, and the ``salt-ssh`` command to find all clients that connect from within a given IP range.
 This identifies all clients within the IP range that have an open SSH port, and can be accessed with known SSH credentials.
