--- a/modules/administration/pages/custom-channels.adoc
+++ b/modules/administration/pages/custom-channels.adoc
@@ -89,7 +89,7 @@ Only custom channels can be deleted.
 . Click btn:[Delete Channel].
 
 When channels are deleted, the packages that are part of the deleted channel are not automatically removed.
-If you try to update packages that have had their channel deleted, it can cause errors.
-In this case, you will need to manually remove the packages.
-Packages can be manually removed in the {productname} {webui} by going to menu:Systems[Systems > All] and selecting the system, navigating to the menu:States[Packages] tab, and setting the package state to [guimenu]``Removed``.
-Note that removing the package using a command line package manager or the [guimenu]``Software`` menu will not permanently remove the package.
+You will not be able to update packages that have had their channel deleted.
+
+You can delete packages that are not associated with a channel in the {productname} {webui}.
+Navigate to menu:Software[Manage > Packages], check the packages to remove, and click btn:[Delete Packages].
