Initial setup per PR#666

--- a/modules/installation/nav-installation-guide.adoc
+++ b/modules/installation/nav-installation-guide.adoc
@@ -8,6 +8,7 @@ ifndef::backend-pdf[]
 *** xref:hardware-requirements.adoc[Hardware Requirements]
 *** xref:network-requirements.adoc[Network Requirements]
 *** xref:client-requirements.adoc[Supported Clients]
+*** xref:pubcloud-requirements.adoc[Public Cloud Requirements]
 ** Installation
 ifeval::[{suma-content} == true]
 *** xref:install-server-unified.adoc[Install Server]
@@ -23,6 +24,7 @@ endif::[]
 *** xref:server-setup.adoc[Server Setup]
 *** xref:proxy-registration.adoc[Proxy Registration]
 *** xref:proxy-setup.adoc[Proxy Setup]
+*** xref:pubcloud-setup[Public Cloud Setup]
 //GFDL
 //** xref:common_gfdl1.2_i.adoc[License]
 
@@ -56,6 +58,9 @@ include::modules/installation/pages/network-requirements.adoc[leveloffset=+2]
 // Client Requirements
 include::modules/installation/pages/client-requirements.adoc[leveloffset=+2]
 
+// Public Cloud Requirements
+include::modules/installation/pages/pubcloud-requirements.adoc[leveloffset=+2]
+
 == Installation
 
 ifeval::[{productname} == "SUSE Manager"]
@@ -86,6 +91,9 @@ include::modules/installation/pages/server-setup.adoc[leveloffset=+2]
 // Proxy Setup
 include::modules/installation/pages/proxy-registration.adoc[leveloffset=+2]
 include::modules/installation/pages/proxy-setup.adoc[leveloffset=+2]
+
+//Public Cloud Setup
+include::modules/installation/pages/pubcloud-setup.adoc[leveloffset=+2]
 
 
 endif::[]
