--- a/modules/installation/pages/pubcloud-setup.adoc
+++ b/modules/installation/pages/pubcloud-setup.adoc
@@ -1,17 +1,36 @@
 [[public-cloud-setup]]
+= Public Cloud Setup
 
-Because {productname} is preinstalled in Public Cloud images, there is no installation step required.
-However, {productname} Server needs to be registered with {scc} to receive updates.
+Public Cloud providers pre-install {productname}, so you do not need to perform any installation steps.
+However, {productname} Server needs to be registered with {scc} to receive updates before you can log in.
 
-To register your system, you have two options:
+For detailed instructions on registering {productname} to {scc}, see xref:installation:server-setup.adoc[].
 
-** Run [command]``yast2 scc`` and enter your {scc} credentials.
-** Run [command]``SUSEConnect -e your_email -r your_registration_code`` as user `root` in a shell.
+When you have registered, all {sle} modules will be activated.
+You will also need to activate the public cloud module.
 
-Registering {productname} Server will also enable all required {sle} Modules, with the exception of the Public Cloud Module. {productname} Server instances in the Public Cloud require packages from the Public Cloud Module and it is recommended to enable the module to keep Public Cloud specific packages up to date. In the YaST2 `Software Repositores` management module select `Add` then select `Extensions and Modules from Registration Server...` and from the list of available extensions select `Public Cloud Module` from the list of extensions. Alternatively, you can add the module via the command line using [command]``SUSEConnect -p sle-module-public-cloud/15.1/x86_64``. The Public Cloud Module can only be registered after the initial registration is completed.
 
-When the installation procedure has finished, you can check that you have all the required modules by using the [command]``SUSEConnect --status-text`` command at a command prompt.
-For {susemgr} Server, the expected modules are:
+
+.Procedure: Activating the Public Cloud Module
+
+. On the {productname} Server, from the desktop, open the {yast} management tool, and navigate to menu:Software[Software Repositories].
+. Click btn:``Add`` and select [guimenu]``Extensions and Modules from Registration Server``.
+. In the [guimenu]``Available extensions`` field, select [guimenu]``Public Cloud Module``.
+
+If you prefer to use the command line, you can add the module with this command:
+----
+SUSEConnect -p sle-module-public-cloud/15.1/x86_64
+----
+
+
+When the installation procedure has finished, you can check that you have all the required modules.
+At the command prompt, enter:
+
+----
+SUSEConnect --status-text
+----
+
+For {productname} Server on a public cloud, the expected modules are:
 
 * {sls} Basesystem Module
 * Python 2 Module
@@ -20,63 +39,44 @@ For {susemgr} Server, the expected modules are:
 * SUSE Manager Server Module
 * Public Cloud Module
 
-= Public Cloud Setup
 
-{productname} Proxy does not have administration access to the {webui}.
-It can be managed through its parent {productname} Server.
 
-[NOTE]
-.Admin Account in Public Clouds
-====
-In public clouds, the setup procedure will automatically create an administrator account. See <<pubclouds-credentials>>.
-====
+=== Account Credentials
 
-=== Public Clouds Account Credentials
+An administrator account is created by default.
+The username and password varies depending on your provider.
 
-The user name automatically created for the administrator in public clouds is `admin`.
-
+.Default Administrator Account Details
 [cols="1,1,1", options="header"]
 |===
-|
-          Amazon EC2
-
-|
-          Google Compute Engine
-
-|
-          Microsoft Azure
-
-
-|
-
-[replaceable]``Instance-ID``
-|
-
-[replaceable]``Instance-ID``
-|
-
-[replaceable]``Instance-Name``**-suma**
+| Provider              | Default Username  | Default Password
+| Amazon EC2            | ``admin``         | ``<instance-ID>``
+| Google Compute Engine | ``admin``         | ``<instance-ID>``
+| Microsoft Azure       | ``admin``         |``<instance-name>``-suma
 |===
 
-The current value for the [replaceable]``Instance-ID`` or [replaceable]``Instance-Name`` in case of the Azure Cloud, can be obtained from the public cloud Web console or from within a terminal session as follows:
+You can retrieve the instance name or IDfrom the public cloud instance web console, or from the command prompt:
 
-** Obtain instance id from within Amazon EC2 instance
-+
+Amazon EC2:
 
 ----
 $ ec2metadata --instance-id
 ----
-** Obtain instance id from within Google Compute Engine instance
-+
+
+Google Compute Engine:
 
 ----
 $ gcemetadata --query instance --id
 ----
-** Obtain instance name from within Microsoft Azure instance
-+
+
+Microsoft Azure:
 
 ----
 $ azuremetadata --instance-name
 ----
 
-After logging in through the {productname} Server {webui}, *change* the default password.
+
+[IMPORTANT]
+====
+When you have logged in to the administrator account for the first time, change the default pasword to protect your account.
+====
