--- a/modules/administration/pages/space-management.adoc
+++ b/modules/administration/pages/space-management.adoc
@@ -1,23 +1,68 @@
 [[space-management]]
 = Managing Disk Space
 
-We are going to add a simple disk checker tool that will monitor certain directories for available space. Once a certain threshold is reached, a warning mail gets sent to the admin. If available space drops below some critical mark, an email is sent and additionally the spacewalk services will be shutdown to prevent running out of space and risking loss of data. Directories to monitor can be configured via /etc/rhn/rhn.conf and the value for the watermarks can be configured as well. Additionally the admin can disable the automatic shutdown. In case a customer does not like the monitoring at all, he is of course free to disable it completely via:
+If there is no available disk space, {productname} will not function.
+Recovering from this kind of error is extremely difficult.
 
+{productname} monitors some directories for available disk space.
+You can modify which directories are monitored, and the warnings that are created.
+All settings are configured in the [path]``/etc/rhn/rhn.conf`` configuration file.
+
+
+
+== Monitored Directories
+
+By default, {productname} monitors these directories:
+
+* [path]``/var/lib/pgsql``
+* [path]``/var/spacewalk``
+* [path]``/var/cache /srv``
+
+You can change which directories are monitored with the [systemitem]``spacecheck_dirs`` parameter.
+You can specify multiple directories by seaprating them with a space.
+
+For example:
+
+----
+spacecheck_dirs = /var/lib/pgsql var/spacewalk /var/cache /srv
+----
+
+
+
+== Thresholds
+
+By default, {productname} will create a warning email when a monitored directory has less than 10% of total space available.
+A critical alert is created when a monitored directory falls below 5% space available.
+
+You can change these alert thresholds with the [systemitem]``spacecheck_free_alert`` and [systemitem]``spacecheck_free_critical`` parameters.
+
+For example:
+
+----
+spacecheck_free_alert = 10
+spacecheck_free_critical = 5
+----
+
+
+
+== Shut Down Services
+
+By default, {productname} will shut down the spacewalk services when the critical alert threshold is reached.
+
+You can disable this behaviour with the [systemitem]``spacecheck_shutdown`` parameter.
+
+For example:
+----
+spacecheck_shutdown = true
+----
+
+
+== Disable Space Checking
+
+The space checking tool is enabled by default.
+You can disable it entirely with these commands:
+
+----
 systemctl stop spacewalk-diskcheck.timer
 systemctl disable spacewalk-diskcheck.timer
-
-If the script is not configured at all, it will use the following default values. This also gets sent in the warning email, so customer can add it via copy&and paste and adapt it to his needs:
-
-# The directories to monitor for available space. Separate multiple directories with a space:
-spacecheck_dirs = /var/lib/pgsql /var/spacewalk /var/cache /srv
-
-# A warning email is triggered when free space in a monitored directory reaches this level (as a percentage):
-spacecheck_free_alert = 10
-
-# A critical alert is triggered when free space in a monitored directory reaches this level (as a percentage):
-spacecheck_free_critical = 5
-
-# Allow spacewalk services to be automatically shut down when free space reaches critical level:
-spacecheck_shutdown = true
-
-The most important directory to check is the database directory /var/lib/pgsql, the others are less critical. Right now the check runs once per hour. This might change if somebody has a strong opinion. Warning events will not only be sent via mail, but also logged in the system logs.
+----
