edits per feedback

--- a/modules/installation/pages/pubcloud-setup.adoc
+++ b/modules/installation/pages/pubcloud-setup.adoc
@@ -60,19 +60,19 @@ You can retrieve the instance name or IDfrom the public cloud instance web conso
 Amazon EC2:
 
 ----
-$ ec2metadata --instance-id
+ec2metadata --instance-id
 ----
 
 Google Compute Engine:
 
 ----
-$ gcemetadata --query instance --id
+gcemetadata --query instance --id
 ----
 
 Microsoft Azure:
 
 ----
-$ azuremetadata --instance-name
+azuremetadata --instance-name
 ----
 
 
