--- a/modules/installation/pages/pubcloud-requirements.adoc
+++ b/modules/installation/pages/pubcloud-requirements.adoc
@@ -1,7 +1,7 @@
 [[public-cloud-requirements]]
 = Public Cloud Requirements
 
-You can run {productname} Server on a cloud instance from a third-party provider such as Amazon EC2, or Microsoft Azure.
+You can run {productname} Server on a public cloud instance from a third-party provider such as Amazon EC2, or Microsoft Azure.
 
 This section details the requirements for using {productname} on a public cloud instance.
 
@@ -27,14 +27,14 @@ It is important to perform hostname and IP configuration before you set up {prod
 * {productname} Server and Proxy instances need to run in a network configuration that provides you control over DNS entries, but cannot be accessed from the internet at large.
 * Within this network configuration DNS resolution must be provided: `hostname -f` must return the fully-qualified domain name (FQDN).
 * DNS resolution is also important for connecting clients.
-* DNS is dependent on the cloud framework you choose, refer to the cloud service provider documentation for detailed instructions.
+* DNS is dependent on the cloud framework you choose, refer to the cloud provider documentation for detailed instructions.
 * We recommend that you locate software repositories, the server database, and the proxy squid cache on an external virtual disk.
 This prevents data loss if the instance is unexpectedly terminated.
 This section includes instructions for setting up an external virtual disk.
 
 == Network Requirements
 
-On a public cloud service, you must run {productname} within a restricted network, such as VPC private subnet with an appropriate firewall setting.
+On a public cloud instance, you must run {productname} within a restricted network, such as VPC private subnet with an appropriate firewall setting.
 The instance must only be able to be accessed by machines in your specified IP ranges.
 
 [WARNING]
@@ -48,11 +48,11 @@ To access the {productname} {webui}, allow HTTPS when configuring the network ac
 
 == Separate Storage Volumes
 
-We recommend that the repositories and the database for {productname} are stored on a virtual storage device.
+We recommend that the repositories and the database for {productname} are stored on a seperate storage device.
 This will help to avoid data loss in cases where the {productname} instance is terminated.
 You must set this up before you run the YaST {productname} setup procedure.
 
-Provision a disk device in the public cloud environment, according the cloud service provider's documentation.
+Provision a disk device in the public cloud environment, according the cloud provider's documentation.
 The size of the disk is dependent on the number of distributions and channels you intend to manage with {productname}.
 We recommend at least 25{nbsp}GB for each distribution, and each channel.
 For more information on disk sizes, see https://www.suse.com/support/kb/doc.php?id=7015050[SUSE Manager sizing examples].
@@ -63,7 +63,7 @@ The name of the device node will vary depending on your provider, and the instan
 Use this command to find all available storage devices:
 
 ----
-$ hwinfo --disk | grep -E "Device File:"
+hwinfo --disk | grep -E "Device File:"
 ----
 
 If you not sure which device to choose, use the [command]``lsblk`` command to see the name and size of each device.
@@ -72,7 +72,7 @@ Choose the name that matches with the size of the virtual disk you are looking f
 Use the [command]``suma-storage`` command with the device name to set up the external disk as the location for the database and repositories:
 
 ----
-$ /usr/bin/suma-storage <devicename>
+/usr/bin/suma-storage <devicename>
 ----
 
 The external storage will be set up as an XFS partition mounted at [path]``/manager_storage``.
