--- a/modules/installation/pages/pubcloud-requirements.adoc
+++ b/modules/installation/pages/pubcloud-requirements.adoc
@@ -60,7 +60,7 @@ For more information on disk sizes, see https://www.suse.com/support/kb/doc.php?
 When you attached the virtual disk, it will appear in your instance as a Unix device node.
 The name of the device node will vary depending on your provider, and the instance type selected.
 
-Use this command to find all available storage devices:
+On your {productname} Server, use this command to find all available storage devices:
 
 ----
 hwinfo --disk | grep -E "Device File:"
