--- a/modules/installation/pages/pubcloud-requirements.adoc
+++ b/modules/installation/pages/pubcloud-requirements.adoc
@@ -66,7 +66,7 @@ On your {productname} Server, use this command to find all available storage dev
 hwinfo --disk | grep -E "Device File:"
 ----
 
-If you not sure which device to choose, use the [command]``lsblk`` command to see the name and size of each device.
+If you are not sure which device to choose, use the [command]``lsblk`` command to see the name and size of each device.
 Choose the name that matches with the size of the virtual disk you are looking for.
 
 Use the [command]``suma-storage`` command with the device name to set up the external disk as the location for the database and repositories:
