--- a/modules/installation/pages/pubcloud-setup.adoc
+++ b/modules/installation/pages/pubcloud-setup.adoc
@@ -13,7 +13,7 @@ You will also need to activate the public cloud module.
 
 .Procedure: Activating the Public Cloud Module
 
-. On the {productname} Server, from the desktop, open the {yast} management tool, and navigate to menu:Software[Software Repositories].
+. On the {productname} Server, open the {yast} management tool, and navigate to menu:Software[Software Repositories].
 . Click btn:``Add`` and select [guimenu]``Extensions and Modules from Registration Server``.
 . In the [guimenu]``Available extensions`` field, select [guimenu]``Public Cloud Module``.
 
