--- a/modules/installation/pages/pubcloud-setup.adoc
+++ b/modules/installation/pages/pubcloud-setup.adoc
@@ -14,7 +14,7 @@ You will also need to activate the public cloud module.
 .Procedure: Activating the Public Cloud Module
 
 . On the {productname} Server, open the {yast} management tool, and navigate to menu:Software[Software Repositories].
-. Click btn:``Add`` and select [guimenu]``Extensions and Modules from Registration Server``.
+. Click btn:[Add] and select [guimenu]``Extensions and Modules from Registration Server``.
 . In the [guimenu]``Available extensions`` field, select [guimenu]``Public Cloud Module``.
 
 If you prefer to use the command line, you can add the module with this command:
