fixed dupliate id

--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -1,4 +1,4 @@
-[[content-lifecycle]]
+[[content-lifecycle-examples]]
 = Content Lifecycle Management Examples
 
 This section contains some common examples of how you can use content lifecycle management.
