added missing migration section

--- a/modules/upgrade/nav-upgrade-guide.adoc
+++ b/modules/upgrade/nav-upgrade-guide.adoc
@@ -4,7 +4,7 @@ ifndef::backend-pdf[]
 * xref:upgrade-overview.adoc[Upgrade Guide]
 ** xref:server-upgrade.adoc[Server Update]
 //** xref:migrate-3x-3x.adoc[Server Upgrade 3.x -> 3.x]
-** xref:migrate-4x-4x.adoc[]
+** xref:migrate-4x-4x.adoc[Migrating from Version 4 to 4.x]
 ** xref:proxy-migration.adoc[Proxy Upgrade 3.x -> 4.x]
 ** xref:client-migration.adoc[Client Migration]
 ** xref:db-migration.adoc[Database Migration]
@@ -31,11 +31,8 @@ include::modules/upgrade/pages/upgrade-overview.adoc[leveloffset=+1]
 // Server upgrade
 include::modules/upgrade/pages/server-upgrade.adoc[leveloffset=+1]
 
-// Migrate from 2x to 3x
-//include::modules/upgrade/pages/migrate-2x-3x.adoc[leveloffset=+1]
-
-// Migrate from 3x to 4x
-// include::modules/upgrade/pages/migrate-3x-4x.adoc[leveloffset=+1]
+// Migration from Version 4x to 4x
+include::modules/upgrade/pages/migrate-4x-4x.adoc[leveloffset=+1]
 
 // Client Migration
 include::modules/upgrade/pages/client-migration.adoc[leveloffset=+1]
