testing pdf tar

--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -19,7 +19,7 @@ ifeval::[{suma-content} == true]
 
 The following documentation is available for {productname} version {productnumber}.
 
-Download All PDFs icon:caret-right[] icon:file-archive[link="./susemanager-docs_en-pdf.tar.gz"]
+Download All PDFs icon:caret-right[] icon:file-archive[link="../susemanager-docs_en-pdf.tar.gz"]
 
 
 [cols="<, ^,<,^", options="header"]
