--- a/adoc/bp_postgresql_database_migration.adoc
+++ b/adoc/bp_postgresql_database_migration.adoc
@@ -4,103 +4,179 @@
 include::entities.adoc[]
 
 
-{productname} 3 uses postgresql database version 9.4.
-Postgresql version 9.6 has been officially released for {sls} 12 SP3.
-In the near future postgresql 9.6 will become the base version provided by {productname}.
-Currently version 9.4 is hardcoded into SUSE Manager, therefore when installing {productname} it will explicitly use this version.
-This chapter provides guidance on migrating an existing 9.4 database to 9.6 on your {productname} Server.
+{productname} 3 uses PostgreSQL version 9.4.
+{productname} 3.2 uses PostgreSQL version 10.
+
+PostgreSQL version 9.6 has been released for {sls} 12 SP3.
+PostgreSQL version 10 has been released for {sls} 12 SP4 and later.
+This chapter provides guidance on migrating your {productname} Server from PostgreSQL 9.4 to 9.6, or migrating from 9.6 to 10.
 
 
 [[bp.postgresql.database.migration.new.installations]]
 == New {productname} Installations
 
 
-Once support for postgresql version 9.6 has been officially released for SUSE Manager, no action will be required for new installations.
-The {productname} extension will pick up the latest version during installation on SLES 12 SP3.
+PostgreSQL version 10 is now supported on {productname}.
+New {productname} installations will have PostgreSQL version 10 installed by default.
+When you install {productname} on {sle}{nbsp}12 SP4, the latest version of PostgreSQL will be installed by default.
 This will be fully transparent to the user.
-Check the active postgresql version with the following command:
+Check the active PostgreSQL version with this command:
 
 ----
 suse-manager-example-srv:~ # psql --version
-psql (PostgreSQL) 9.6.3
+psql (PostgreSQL) 10.9
 ----
+
+
 
 [[bp.postgresql.database.migrating.existing.installations]]
 == Migrating an Existing Installation
 
+[WARNING]
+====
+Always create a database backup before performing a migration.
+For more information about a database backup, see xref:bp_chap_suma_backup.adoc[].
+====
 
-Before migrating to the new database version, ensure SUSE Manager is fully patched to the latest version.
-You can check if the system is ready to use postgresql 9.6 by issuing the following command:
+PostgreSQL upgrades can be performed in two ways: a regular upgrade, or a fast upgrade:
+
+A regular upgrade will create a complete copy of the database, so you will need double the existing database size of space available.
+Regular upgrades can take a considerable amount of time, depending on the size of the database and the speed of the storage system.
+
+A fast upgrade only takes a few minutes, and uses almost no additional disk space.
+However, if a fast upgrade fails, you must restore the database from the backup.
+A fast upgrade reduces the risk of running out of disk space.
+The regular upgrade will copy the database files instead of hardlinking them.
+
+PostgreSQL stores data at [path]``/var/lib/pgsql/data/``, and logs to [path]``/var/lib/pgsql/data/pg_xlog/``.
+
+
+
+=== Upgrade from PostgreSQL 9.4 to 9.6
+
+Before you migrate to PostgreSQL 9.6, ensure SUSE Manager is the latest version, and fully updated.
+You can check if the system is ready to use PostgreSQL 9.6 with:
 
 ----
-suma-test-srv:~ # rpm -q smdba
-smdba-1.5.8-0.2.3.1.x86_64
+psql --version
 ----
+
+If you are using PostgreSQL{nbsp}9.4, you can upgrade to PostgreSQL{nbsp}9.6.
+
 
 [IMPORTANT]
 ====
-Postgresql 9.6 requires smdba version 1.5.8 or higher
-====
-
-[WARNING]
-====
-Always create a database backup before performing a migration
-====
-
-
-$$.$$
-The database migration begins by executing the following command:
-
+PostgreSQL 9.6 requires smdba version 1.5.8 or higher.
+Check with:
 ----
-$> /usr/lib/susemanager/bin/pg-migrate.sh
+rpm -q smdba
 ----
+====
 
 
-The [path]``pg-migrate.sh``
- script will automatically perform the following operations:
+.Procedure: Performing a Regular Upgrade
+. Perform a database backup.
+For more information on backing up, see xref:bp_chap_suma_backup.adoc[].
+. Start the upgrade:
++
+----
+/usr/lib/susemanager/bin/pg-migrate.sh
+----
+. When the upgrade has successfully completed, you can safely delete the old database directory and reclaim lost disk space.
+The old directory is renamed to [path]``/var/lib/pgsql/data-pg94``.
+
+
+The [path]``pg-migrate.sh`` script performs these operations:
 
 * Stop spacewalk services
 * Shut down the running database
-* Check if postgresql 9.6 is installed and install it if not already present
-* Switch from postgresql 9.4 to postgresql 9.6 as the new default
-* Initiates the database migration
-* Creates a postgresql configuration file tuned for use by SUSE Manager (The reason for the latest version of smdba)
-* Start both the database and spacewalk services
+* Check if PostgreSQL 9.6 is installed and install it if necessary
+* Switch from PostgreSQL 9.4 to PostgreSQL 9.6 as the new default
+* Start the database migration
+* Create a PostgreSQL configuration file tuned for use by {productname}
+* Start the database and spacewalk services
 
 
 [NOTE]
 ====
-Please note that during the migration the data directory of the database is copied for use by the postgresql 9.6.
-This results in temporarily doubling the amount of required disk space.
-In case of a failure, the migration script will attempt a restore to the original state.
-After a successful migration, you may safely delete the old database directory (renamed to /var/lib/pgsql/data-pg94) to reclaim lost disk space.
-====
-
-== Performing a Fast Migration
-
-
-There are two negative aspects to performing a regular migration:
-
-* You temporarily need double the disk space under [path]``/var/lib/pgsql``
-* Depending on the size of the database the migration can take up some time because the whole data directory needs to be copied.
-
-
-It is possible however to perform a ``fast migration``.
-In this case you do not need the additional disk space as the database files will not be copied but hard linked.
-This also has the natural effect of greatly increasing the speed of the migration process The entire migration could be completed in less than one minute.
-
-[WARNING]
-====
-Keep in mind if a fast migration fails, database restoration will only be possible with a database backup.
-Only perform a fast migration if you have an availabel database backup.
+If the upgrade fails, the migration script will attempt to restore the database to its original state.
 ====
 
 
-Perform a fast migration with the following command (Ensure you have a database backup):
+.Procedure: Performing a Fast PostgreSQL Upgrade
+. Perform a database backup.
+Without a verified database backup, you must not initiate a fast upgrade.
+For more information on backing up, see xref:bp_chap_suma_backup.adoc[].
+. Begin the upgrade:
++
+----
+/usr/lib/susemanager/bin/pg-migrate.sh fast
+----
+. When the upgrade has successfully completed, you can safely delete the old database directory and reclaim lost disk space.
+The old directory is renamed to [path]``/var/lib/pgsql/data-pg94``.
+
+
+
+=== Upgrade from PostgreSQL 9.6 to 10
+
+
+Before you migrate to PostgreSQL 9.10, ensure SUSE Manager is the latest version, and fully updated.
+You can check if the system is ready to use PostgreSQL 9.10 with:
 
 ----
-$> /usr/lib/susemanager/bin/pg-migrate.sh fast
+psql --version
 ----
+
+If you are using PostgreSQL{nbsp}9.6, you can upgrade to PostgreSQL{nbsp}10.
+
+[IMPORTANT]
+====
+PostgreSQL 9.10 requires smdba version 1.6.2 or higher.
+Check with:
+----
+rpm -q smdba
+----
+====
+
+.Procedure: Performing a Regular Upgrade
+. Perform a database backup.
+// For more information on backing up, see xref:administration:backup-restore.adoc[].
+. Start the upgrade:
++
+----
+/usr/lib/susemanager/bin/pg-migrate-96-to-10.sh
+----
+. When the upgrade has successfully completed, you can safely delete the old database directory and reclaim lost disk space.
+The old directory is renamed to [path]``/var/lib/pgsql/data-pg96``.
+
+The [path]``pg-migrate-96-to-10.sh`` script performs these operations:
+
+* Stop spacewalk services
+* Shut down the running database
+* Check if PostgreSQL{nbsp}10 is installed and install it if necessary
+* Switch from PostgreSQL{nbsp}9.6 to PostgreSQL{nbsp}10 as the new default
+* Initiate the database migration
+* Create a PostgreSQL configuration file tuned for use by {productname}
+* Start the database and spacewalk services
+
+[NOTE]
+====
+If the upgrade fails, the migration script will attempt to restore the database to its original state.
+====
+
+.Procedure: Performing a Fast PostgreSQL Upgrade
+. Perform a database backup.
+Without a verified database backup, you must not initiate a fast upgrade.
+// For more information on backing up, see xref:administration:backup-restore.adoc[].
+. Start the upgrade:
++
+----
+/usr/lib/susemanager/bin/pg-migrate-96-to-10.sh fast
+----
+. When the upgrade has successfully completed, you can safely delete the old database directory and reclaim lost disk space.
+The old directory is renamed to [path]``/var/lib/pgsql/data-pg96``.
+
+
 
 == Typical Migration Sample Session
 
