--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -3,11 +3,13 @@
 
 == What is {productname}?
 
+// [#salt.gloss] may be used to create a tooltip for a glossary term: see branding/supplemental-ui/suma/sumacom/partials/footer-scripts.hbs
+
 {productname} is a solution for organizations that require absolute control over maintenance and package deployment on their servers.
 {productname} enables you to manage large sets of Linux systems and keep them up to date, with automated software management, asset management, and system provisioning.
 {productname} allows you to maintain a high level of security while effectively managing system life-cycle requirements.
 
-{productname} uses [#salt.gloss]*Salt* to provide event-driven configuration and management control.
+{productname} uses Salt to provide event-driven configuration and management control.
 The Salt-master orchestrates thousands of Salt clients ({productname} Clients) using remote execution.
 
 {productname} offers seamless management of {sle}, {rhel}, Ubuntu, CentOS, and Scientific Linux client systems and is fully compatible with Red Hat Satellite Server.
