port from maint/3.2

--- a/modules/upgrade/pages/db-migration.adoc
+++ b/modules/upgrade/pages/db-migration.adoc
@@ -59,15 +59,15 @@ Regular upgrades can take a considerable amount of time, depending on the size o
 
 A fast upgrade only takes a few minutes, and uses almost no additional disk space.
 However, if a fast upgrade fails, you must restore the database from the backup.
-With the fast upgrade the risk to run out of disk space is smaller.
-
-In case of failure you do not have the implicit backup that you get when doing a regular upgrade.
+A fast upgrade reduces the risk of running out of disk space.
 The regular upgrade will copy the database files instead of hardlinking them.
+
+PostgreSQL stores data at [path]``/var/lib/pgsql/data/``, and logs to [path]``/var/lib/pgsql/data/pg_xlog/``.
 
 .Procedure: Performing a Regular Upgrade
 . Perform a database backup.
 For more information on backing up, see xref:administration:backup-restore.adoc[].
-. Begin the upgrade:
+. Start the upgrade:
 +
 ----
 /usr/lib/susemanager/bin/pg-migrate-96-to-10.sh
@@ -94,7 +94,7 @@ If the upgrade fails, the migration script will attempt to restore the database 
 . Perform a database backup.
 Without a verified database backup, you must not initiate a fast upgrade.
 For more information on backing up, see xref:administration:backup-restore.adoc[].
-. Begin the upgrade:
+. Start the upgrade:
 +
 ----
 /usr/lib/susemanager/bin/pg-migrate-96-to-10.sh fast
