--- a/modules/upgrade/pages/db-migration.adoc
+++ b/modules/upgrade/pages/db-migration.adoc
@@ -60,7 +60,7 @@ Regular upgrades can take a considerable amount of time, depending on the size o
 A fast upgrade only takes a few minutes, and uses almost no additional disk space.
 However, if a fast upgrade fails, you must restore the database from the backup.
 A fast upgrade reduces the risk of running out of disk space.
-The regular upgrade will copy the database files instead of hardlinking them.
+The regular upgrade will copy the database files instead of creating hardlinks between the files.
 
 PostgreSQL stores data at [path]``/var/lib/pgsql/data/``, and logs to [path]``/var/lib/pgsql/data/pg_xlog/``.
 
