--- a/modules/administration/pages/tuning-changelogs.adoc
+++ b/modules/administration/pages/tuning-changelogs.adoc
@@ -29,6 +29,9 @@ You can delete and request a regeneration of cached data from the command line:
 
 ----
 spacewalk-sql -i
+----
+Then on the SQL database prompt, enter:
+----
 DELETE FROM rhnPackageRepodata;
 INSERT INTO rhnRepoRegenQueue (id, CHANNEL_LABEL, REASON, FORCE)
 (SELECT sequence_nextval('rhn_repo_regen_queue_id_seq'),
