--- a/modules/administration/pages/icinga.adoc
+++ b/modules/administration/pages/icinga.adoc
@@ -35,7 +35,7 @@ SLES {sles-version} and later include these channels by default.
 +
 
 ----
-zypper in icinga icinga-idoutils-pgsql postgresql postgresql94-server \
+zypper in icinga icinga-idoutils-pgsql postgresql postgresql-server \
 monitoring-plugins-all apache2
 ----
 
@@ -57,19 +57,28 @@ define contact {
 systemctl enable postgresql.service
 systemctl start postgresql.service
 ----
-. Create the database and user for Icinga:
-+
+. Become postgres system user:
+----
+sudo su - postgres
+----
+. Start a SQL CLI:
+----
+psql
+----
+. Then setup a new password for the administrative user postgres, and configure a new icinga user:
+----
+ALTER USER postgres WITH PASSWORD '<newpassword>';
+CREATE USER icinga;
+ALTER USER icinga WITH PASSWORD 'icinga';
+CREATE DATABASE icinga;
+GRANT ALL ON DATABASE icinga TO icinga;
+\q
+----
+Finally, exit the postgres system user session:
+----
+exit
+----
 
-----
->psql
- postgres=# ALTER USER postgres WITH PASSWORD '<newpassword>';
- postgres=# CREATE USER icinga;
- postgres=# ALTER USER icinga WITH PASSWORD 'icinga';
- postgres=# CREATE DATABASE icinga;
- postgres=# GRANT ALL ON DATABASE icinga TO icinga;
- postgres=# \q
- exit
-----
 . Adjust client authentication rights located in `/var/lib/pgsql/data/pg_hba.conf` to match the following:
 +
 
@@ -107,11 +116,11 @@ The entries in [path]``pg_hba.conf`` are read from top to bottom.
 systemctl reload postgresql.service
 ----
 
-. Configure the database schema by running the following command in [path]``/usr/share/doc/packages/icinga-idoutils-pgsql/pgsql/``:
+. Configure the database schema by running the following command:
 +
 
 ----
-psql -U icinga -d icinga < pgsql.sql
+psql -U icinga -d icinga < /usr/share/doc/packages/icinga-idoutils-pgsql/pgsql/pgsql.sql
 ----
 
 . Edit the following lines in `/etc/icinga/ido2db.cfg` to switch from the default setting of mysql to postgres:
