Server: change firewall rules and URL

--- a/modules/administration/pages/icinga.adoc
+++ b/modules/administration/pages/icinga.adoc
@@ -137,7 +137,7 @@ vi /etc/icinga/ido2db.cfg
 [IMPORTANT]
 .Open Firewall Port
 ====
-Allow port `5432` through your firewall or you will not be able to access the WebGUI.
+Allow port `80` through your firewall or you will not be able to access the WebGUI.
 ====
 +
 
@@ -160,7 +160,7 @@ systemctl enable apache2.service
 systemctl start apache2.service
 ----
 
-. Login to the WebGUI at: http://localhost/icinga.
+. Login to the WebGUI at: http://<client-hostname>/icinga.
 
 This concludes setup and initial configuration of Icinga.
 
