Small fix for server monitoring

--- a/modules/administration/pages/icinga.adoc
+++ b/modules/administration/pages/icinga.adoc
@@ -178,7 +178,7 @@ This section does not attempt to cover all monitoring solutions Icinga has to of
 +
 
 ----
-zypper install nagios-nrpe susemanager-nagios-plugin insserv nrpe monitoring-plugins-nrpe
+zypper install nagios-nrpe susemanager-nagios-plugin insserv-compat nrpe monitoring-plugins-nrpe
 ----
 
 . Modify the NRPE configuration file located at:
@@ -379,7 +379,7 @@ The following section provides information on monitoring uptime of critical {pro
 +
 
 ----
-vi /usr/lib/nagios/plugins/ check_systemd.sh
+vi /usr/lib/nagios/plugins/check_systemd.sh
 ----
 
 . For this example you will use an opensource community script to monitor Systemd services.
