--- a/modules/installation/pages/pubcloud-requirements.adoc
+++ b/modules/installation/pages/pubcloud-requirements.adoc
@@ -34,7 +34,8 @@ This section includes instructions for setting up an external virtual disk.
 
 == Network Requirements
 
-On a public cloud instance, you must run {productname} within a restricted network, such as VPC private subnet with an appropriate firewall setting.
+When you use {productname} on a public cloud, you must use a restricted network.
+We recommend you use a VPC private subnet with an appropriate firewall setting.
 The instance must only be able to be accessed by machines in your specified IP ranges.
 
 [WARNING]
