changes per feedback

--- a/modules/administration/pages/custom-channels.adoc
+++ b/modules/administration/pages/custom-channels.adoc
@@ -2,10 +2,11 @@
 = Custom Channels
 
 While {productname} provides all required channels, you might find it useful to create custom channels specific to your environment.
-{productname} Administrators and Channel Administrators have channel management authority, which gives them the ability to create and manage their own custom channels.
 
 Custom channels give you the ability to create your own software packages and repositories, which you can use to update your clients.
 They also allow you to use software provided by third party vendors in your environment.
+
+You must have administrator privileges to be able to create and manage custom channels.
 
 Before you create a custom channel, determine which base channel you want to associate it with, and which repositories you want to use for content.
 
