reworded per feedback

--- a/modules/administration/pages/space-management.adoc
+++ b/modules/administration/pages/space-management.adoc
@@ -1,10 +1,9 @@
 [[space-management]]
 = Managing Disk Space
 
-If there is no available disk space, {productname} will not function.
-Recovering from this kind of error is extremely difficult.
+Running out of disk space can have a severe impact on the {productname} database and file structure which, in most cases, is not recoverable.
 
-{productname} monitors some directories for available disk space.
+{productname} monitors some directories for free disk space.
 You can modify which directories are monitored, and the warnings that are created.
 All settings are configured in the [path]``/etc/rhn/rhn.conf`` configuration file.
 
@@ -19,7 +18,7 @@ By default, {productname} monitors these directories:
 * [path]``/var/cache /srv``
 
 You can change which directories are monitored with the [systemitem]``spacecheck_dirs`` parameter.
-You can specify multiple directories by seaprating them with a space.
+You can specify multiple directories by separating them with a space.
 
 For example:
 
