--- a/modules/administration/pages/tshoot-diskspace.adoc
+++ b/modules/administration/pages/tshoot-diskspace.adoc
@@ -20,6 +20,10 @@ If more detailed instructions are required, put them in a "Resolving" procedure:
 ////
 
 Running out of disk space can have a severe impact on the {productname} database and file structure which, in most cases, is not recoverable.
+
+{productname} monitors free space in specific directories, and has configurable alerts.
+For more on space management, see xref:administration:space-management.adoc[].
+
 You can recover disk space by removing unused custom channels and redundant database entries before you run out of space entirely.
 
 For instructions on how to delete custom channels, see xref:administration:channel-management.adoc[].
