--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -42,7 +42,8 @@ ifndef::backend-pdf[]
 *** xref:tshoot-corruptrepo.adoc[Troubleshooting Corrupt Repositories]
 *** xref:tshoot-diskspace.adoc[Troubleshooting Disk Space]
 *** xref:tshoot-localcert.adoc[Troubleshooting Local Certificates]
-*** xref:tshoot-osadjabberd.adoc[Troubleshooting OSAD and jabberd]
+// Delinking. See https://github.com/SUSE/spacewalk/issues/9516 LKB 2019-09-20
+//*** xref:tshoot-osadjabberd.adoc[Troubleshooting OSAD and jabberd]
 *** xref:tshoot-packages.adoc[Troubleshooting Packages]
 *** xref:tshoot-registerclones.adoc[Troubleshooting Registering Cloned Clients]
 *** xref:tshoot-rpctimeout.adoc[Troubleshooting RPC Timeouts]
@@ -135,7 +136,8 @@ include::modules/administration/pages/tshoot-diskspace.adoc[leveloffset=+2]
 
 include::modules/administration/pages/tshoot-localcert.adoc[leveloffset=+2]
 
-include::modules/administration/pages/tshoot-osadjabberd.adoc[leveloffset=+2]
+// Delinking. See https://github.com/SUSE/spacewalk/issues/9516 LKB 2019-09-20
+// include::modules/administration/pages/tshoot-osadjabberd.adoc[leveloffset=+2]
 
 include::modules/administration/pages/tshoot-packages.adoc[leveloffset=+2]
 
