--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -33,6 +33,8 @@ ifndef::backend-pdf[]
 // Content Lifecycle
 ** xref:content-lifecycle.adoc[Content Lifecycle Management]
 *** xref:content-lifecycle-examples.adoc[Content Lifecycle Management Examples]
+// Spacewalk Reports
+** xref:reports.adoc[Generate Reports]
 ** Tuning
 *** xref:tuning-changelogs.adoc[Tuning Changelogs]
 ** Maintenance Window
@@ -115,6 +117,10 @@ include::modules/administration/pages/backup-restore.adoc[leveloffset=+1]
 // Content Lifecycle
 
 include::modules/administration/pages/content-lifecycle.adoc[leveloffset=+1]
+
+// Spacewalk Reports
+
+include::modules/administration/pages/reports.adoc[leveloffset=+1]
 
 include::modules/administration/pages/content-lifecycle-examples.adoc[leveloffset=+2]
 
