--- a/modules/administration/pages/space-management.adoc
+++ b/modules/administration/pages/space-management.adoc
@@ -48,7 +48,7 @@ spacecheck_free_critical = 5
 
 By default, {productname} will shut down the spacewalk services when the critical alert threshold is reached.
 
-You can disable this behaviour with the [systemitem]``spacecheck_shutdown`` parameter.
+You can disable this behavior with the [systemitem]``spacecheck_shutdown`` parameter.
 
 For example:
 ----
