updates per feedback

--- a/modules/administration/pages/space-management.adoc
+++ b/modules/administration/pages/space-management.adoc
@@ -30,7 +30,7 @@ spacecheck_dirs = /var/lib/pgsql var/spacewalk /var/cache /srv
 
 == Thresholds
 
-By default, {productname} will create a warning email when a monitored directory has less than 10% of total space available.
+By default, {productname} will create a warning mail when a monitored directory has less than 10% of total space available.
 A critical alert is created when a monitored directory falls below 5% space available.
 
 You can change these alert thresholds with the [systemitem]``spacecheck_free_alert`` and [systemitem]``spacecheck_free_critical`` parameters.
