--- a/modules/upgrade/nav-upgrade-guide.adoc
+++ b/modules/upgrade/nav-upgrade-guide.adoc
@@ -5,6 +5,7 @@ ifndef::backend-pdf[]
 ** xref:server-upgrade.adoc[Server Update]
 ** xref:migrate-3x-4x.adoc[Migrating from Version 3.2 to 4.x]
 ** xref:migrate-4x-4x.adoc[Migrating from Version 4 to 4.x]
+** xref:proxy-upgrade.adoc[Proxy Update]
 ** xref:proxy-migration.adoc[Proxy Upgrade 3.x to 4.x]
 ** xref:client-migration.adoc[Client Migration]
 ** xref:db-migration.adoc[Database Migration]
@@ -28,7 +29,7 @@ include::modules/upgrade/pages/common_gfdl1.2_i.adoc[leveloffset=+1]
 // Upgrade Overview
 include::modules/upgrade/pages/upgrade-overview.adoc[leveloffset=+1]
 
-// Server upgrade
+// Server Update
 include::modules/upgrade/pages/server-upgrade.adoc[leveloffset=+1]
 
 // Migration from Version 3x to 4x
@@ -36,6 +37,11 @@ include::modules/upgrade/pages/migrate-3x-4x.adoc[leveloffset=+1]
 
 // Migration from Version 4x to 4x
 include::modules/upgrade/pages/migrate-4x-4x.adoc[leveloffset=+1]
+
+// Proxy Update
+include::modules/upgrade/pages/proxy-upgrade.adoc[leveloffset=+1]
+
+include::modules/upgrade/pages/proxy-migration.adoc[leveloffset=+1]
 
 // Client Migration
 include::modules/upgrade/pages/client-migration.adoc[leveloffset=+1]
