Comment server monitoring

--- a/modules/administration/pages/icinga.adoc
+++ b/modules/administration/pages/icinga.adoc
@@ -165,7 +165,15 @@ systemctl start apache2.service
 This concludes setup and initial configuration of Icinga.
 
 
+////
+Next section shows the user how to use Icinga to monitor a SUSE Manager Server, but we now use Prometheus for that.
 
+If at some point we want to republish this, it will need a full cleanup, to show cleanup all Server references and add simple examples.
+
+For now, it is commented.
+////
+
+////
 [[at.icinga.nrpe.quickstart]]
 == Icinga and NRPE Quickstart
 
@@ -802,7 +810,7 @@ define service{
 ** `Unspecified:The host cannot be found in the {productname} database or the host name is not unique`
 
 This concludes setup of the `check_suma_lastevent` plugin.
-
+////
 
 
 [[at.icinga.additional.resources.]]
