--- a/modules/administration/pages/master-fingerprint.adoc
+++ b/modules/administration/pages/master-fingerprint.adoc
@@ -6,7 +6,7 @@ To set up validation from client to master enter the master's fingerprint within
 
 See the following procedure:
 
-. On the master enter the following command as root and note the fingerprint:
+. On the master enter the following command as root and note the fingerprint labeled as ``master.pub``:
 +
 
 ----
