--- a/modules/administration/pages/icinga.adoc
+++ b/modules/administration/pages/icinga.adoc
@@ -57,7 +57,7 @@ define contact {
 systemctl enable postgresql.service
 systemctl start postgresql.service
 ----
-. Become postgres system user:
+. Become the ``postgres`` system user:
 ----
 sudo su - postgres
 ----
