--- a/modules/administration/pages/icinga.adoc
+++ b/modules/administration/pages/icinga.adoc
@@ -65,7 +65,7 @@ sudo su - postgres
 ----
 psql
 ----
-. Then setup a new password for the administrative user postgres, and configure a new icinga user:
+. Create a new password for the administrative user ``postgres``, and configure a new ``icinga`` user:
 ----
 ALTER USER postgres WITH PASSWORD '<newpassword>';
 CREATE USER icinga;
