--- a/modules/administration/pages/icinga.adoc
+++ b/modules/administration/pages/icinga.adoc
@@ -74,7 +74,7 @@ CREATE DATABASE icinga;
 GRANT ALL ON DATABASE icinga TO icinga;
 \q
 ----
-Finally, exit the postgres system user session:
+Exit the ``postgres`` system user session:
 ----
 exit
 ----
