--- a/modules/administration/pages/icinga.adoc
+++ b/modules/administration/pages/icinga.adoc
@@ -137,7 +137,7 @@ vi /etc/icinga/ido2db.cfg
 [IMPORTANT]
 .Open Firewall Port
 ====
-Allow port `80` through your firewall or you will not be able to access the WebGUI.
+Allow port `80` through your firewall or you will not be able to access the {webui}.
 ====
 +
 
