--- a/modules/administration/pages/icinga.adoc
+++ b/modules/administration/pages/icinga.adoc
@@ -160,7 +160,7 @@ systemctl enable apache2.service
 systemctl start apache2.service
 ----
 
-. Login to the WebGUI at: http://<client-hostname>/icinga.
+. Log in to the {webui} at: http://<client-hostname>/icinga.
 
 This concludes setup and initial configuration of Icinga.
 
