--- a/modules/administration/pages/icinga.adoc
+++ b/modules/administration/pages/icinga.adoc
@@ -116,7 +116,7 @@ The entries in [path]``pg_hba.conf`` are read from top to bottom.
 systemctl reload postgresql.service
 ----
 
-. Configure the database schema by running the following command:
+. Configure the database schema with this command:
 +
 
 ----
