--- a/modules/upgrade/pages/proxy-upgrade.adoc
+++ b/modules/upgrade/pages/proxy-upgrade.adoc
@@ -1,6 +1,22 @@
 [[update.suse.manager.proxy]]
 = Update {productname} Proxy
 
+{productname} Proxies are managed as clients by {productname}.
+Thus patches and package updates combined as maintenance updates (MU) are to be installed with {productname} as it is done with other {productname} clients.
+When the update is installed, you must check whether a restart of the proxy service is required.
+
+// SUSE Manager and now a remote command is needed (or a salt state) which perform the restart.
+// Creating an Action Chain can help with this task.
+
+to
+create an action chain that can be applied to several proxies, so he can
+update them on batches, or all at the same time, to:
+
+1. Run a salt command: `spacewalk-proxy stop`
+2. Update the packages
+3. Run a salt command: `spacewalk-proxy start`
+
+
 == Before You Begin
 
 Before you perform any upgrade,
